--- a/cv.html
+++ b/cv.html
@@ -157,7 +157,7 @@
       <a href="https://web.mit.edu/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/MIT_logo.svg" class="logo"></a>
       </div> 
       <div class="cvrightcolumn">
-        <p style="padding-top:10px">
+        <p>
         <b>Formation and Maintenance of Tropical Cyclone Spiral Bands in Idealized Numerical Simulations</b>, 2012-2018</br>
         Thesis committee: Kerry Emanuel (advisor, MIT), Alan Plumb (MIT), Zhiming Kuang (Harvard), and Robert A. Houze, Jr. (University of Washington) </br>
         Graduate research at MIT
@@ -165,6 +165,26 @@
       </div> 
  </div>
 </div>
+
+<div class="container">
+  <div class="clearfix">
+      <div class="cvleftcolumn"></br> 
+      <a href="https://soars.ucar.edu/" target="_blank"><img src="https://www.ucar.edu/sites/default/files/inline-images/UCAR%20logo%202_0.png" class="logo"></a>
+      </div> 
+      <div class="cvrightcolumn">
+        <p style="padding-top:10px">
+        <ul>
+         <li><b>Stability of a balanced shallow-water vortex: A first step towards better understanding the formation of tropical cyclone spiral bands</b>, Summer 2013, Mentor: Rich Rotunno <li>
+         <li><b>Rapid intensification of Hurricane Earl in Advanced Hurricane WRF model simulations</b>, Summer 2011, Mentor: Christopher Davis</li>
+         <li><b>The influence of environmental vertical wind shear on hurricane eye formation</b>, Summer 2010, Mentors: Jonathan Vigh and Shuyi S. Chen</li> 
+        </ul>
+      Significant Opportunities in Atmospheric Research and Science Program at the National Center for Atmospheric Research
+        </p>
+      </div> 
+ </div>
+</div>
+
+
 </br>
 
   
