--- a/cv.html
+++ b/cv.html
@@ -173,11 +173,9 @@
       </div> 
       <div class="cvrightcolumn">
         <p style="padding-top:10px">
-        <ul>
-         <li><b>Stability of a balanced shallow-water vortex: A first step towards better understanding the formation of tropical cyclone spiral bands</b>, Summer 2013, Mentor: Rich Rotunno <li>
-         <li><b>Rapid intensification of Hurricane Earl in Advanced Hurricane WRF model simulations</b>, Summer 2011, Mentor: Christopher Davis</li>
-         <li><b>The influence of environmental vertical wind shear on hurricane eye formation</b>, Summer 2010, Mentors: Jonathan Vigh and Shuyi S. Chen</li> 
-        </ul>
+         - <b>Stability of a balanced shallow-water vortex: A first step towards better understanding the formation of tropical cyclone spiral bands</b>, Summer 2013, Mentor: Rich Rotunno </br>
+         - <b>Rapid intensification of Hurricane Earl in Advanced Hurricane WRF model simulations</b>, Summer 2011, Mentor: Christopher Davis </br>
+         - <b>The influence of environmental vertical wind shear on hurricane eye formation</b>, Summer 2010, Mentors: Jonathan Vigh and Shuyi S. Chen </br>
       Significant Opportunities in Atmospheric Research and Science Program at the National Center for Atmospheric Research
         </p>
       </div> 
