--- a/cv.html
+++ b/cv.html
@@ -182,6 +182,20 @@
  </div>
 </div>
 
+<div class="container">
+  <div class="clearfix">
+      <div class="cvleftcolumn"></br> 
+      <a href="https://www.rsmas.miami.edu/" target="_blank"><img src="https://ucomm.miami.edu/_assets/images/tools-and-resources/signatures/jpg-72/umiami_prime_72.jpg" class="logo"></a>
+      </div> 
+      <div class="cvrightcolumn">
+        <p>
+        <b>Comparison of GPS dropsondes between developing and non-developing disturbances in the Atlantic</b>, Summer 2009, Mentor: Shuyi S. Chen</br>
+       University of Miami's Rosenstiel School of Marine and Atmospheric Science; internship sponsored by the UPRM Atmospheric Science and Meteorology Program
+        </p>
+      </div> 
+ </div>
+</div>
+
 
 </br>
 
