--- a/cv.html
+++ b/cv.html
@@ -185,7 +185,7 @@
 <div class="container">
   <div class="clearfix">
       <div class="cvleftcolumn"></br> 
-      <a href="https://www.rsmas.miami.edu/" target="_blank"><img src="https://ucomm.miami.edu/_assets/images/tools-and-resources/signatures/jpg-72/umiami_prime_72.jpg" class="logo"></a>
+      <a href="https://www.rsmas.miami.edu/" target="_blank"><img src="https://ucomm.miami.edu/_assets/images/tools-and-resources/signatures/umiami_informal.gif" class="logo"></a>
       </div> 
       <div class="cvrightcolumn">
         <p>
