--- a/cv.html
+++ b/cv.html
@@ -195,14 +195,28 @@
       </div> 
  </div>
 </div>
-
-
 </br>
 
-  
   <div class="section-title">
     Publications
   </div>
+
+<p>
+In preparation: 
+<ul>
+   <li>b>D. Perez-Betancourt</b> and K. A. Emanuel, 2020. Spiral bands in dry tropical cyclones. J. Atmos. Sci.</li>
+</ul>  
+  
+Refereed:
+<ul>
+   <li>O'Neill, M. E, <b>D. Perez-Betancourt</b>, and A. A. Wing, 2017: Accessible environments for diurnal-period waves in simulated tropical cyclones. J. Atmos. Sci., 74, 2489-2502, <a style="color:black" href="https://doi.org/10.1175/JAS-D-16-0294.1" target="_blank">doi:10.1175/JAS-D-16-0294.1</a>.</i></li>
+</ul>
+
+Non-refereed:
+<ul>
+  <li><b>Perez-Betancourt, D.</b>, and C.A. Davis, 2012. <a style="color:black" href="https://ams.confex.com/ams/30Hurricane/webprogram/Manuscript/Paper205607/PerezBetancourt_Diamilet_AMS_extabstract.pdf" target="_blank">Rapid intensification of Hurricane Earl in Advanced Hurricane WRF model simulations</a>, 30th Conf. Hurr. Trop. Meteor., Ponte Vedra Beach, FL, Amer. Meteor. Soc., 7B.4.</li>
+</ul>
+</p>
 
   <div class="section-title">
     Presentations
