--- a/cv.html
+++ b/cv.html
@@ -201,10 +201,10 @@
     Publications
   </div>
 
-<p>
+<p style="padding-left:15px">
 In preparation: 
 <ul>
-   <li>b>D. Perez-Betancourt</b> and K. A. Emanuel, 2020. Spiral bands in dry tropical cyclones. J. Atmos. Sci.</li>
+   <li><b>D. Perez-Betancourt</b> and K. A. Emanuel, 2020. Spiral bands in dry tropical cyclones. J. Atmos. Sci.</li>
 </ul>  
   
 Refereed:
