--- a/cv.html
+++ b/cv.html
@@ -235,8 +235,8 @@ Non-refereed:
           <li><a style="color:black" href="https://ams.confex.com/ams/94Annual/webprogram/Paper235696.html" target="_blank">94th AMS Annual Meeting: 26th Conference on Weather Analysis and Forecasting / 22nd Conference on Numerical Weather Prediction, Atlanta, GA, 2014</a></li>
           <li><a style="color:black" href="https://ams.confex.com/ams/30Hurricane/webprogram/Paper205607.html" target="_blank">30th AMS Conference on Hurricanes and Tropical Meteorology, Ponte Vedra Beach, FL, 2012</a></li>
           <li>NOAA Educational Partnership Program (EPP) 6th Education and Science Forum, Tallahassee, FL, 2012</li>
-          <li><a style="color:black" href="https://aaas.confex.com/aaas/2012/webprogram/Paper8002.html" target="_blank">American Association for the Advancement of Science (AAAS) Annual Meeting, Vancouver, Canada, 2012</li>
-          <li><a style="color:black" href="https://ams.confex.com/ams/92Annual/webprogram/Paper204180.html" target="_blank">92nd AMS Annual Meeting: T.N. Krishnamurti Symposium, New Orleans, LA, 2012</li>
+          <li><a style="color:black" href="https://aaas.confex.com/aaas/2012/webprogram/Paper8002.html" target="_blank">American Association for the Advancement of Science (AAAS) Annual Meeting, Vancouver, Canada, 2012</a></li>
+          <li><a style="color:black" href="https://ams.confex.com/ams/92Annual/webprogram/Paper204180.html" target="_blank">92nd AMS Annual Meeting: T.N. Krishnamurti Symposium, New Orleans, LA, 2012</a></li>
          <li>5th FORMOSAT-3/COSMIC Workshop and Student Conference, Taipei, Taiwan, 2011 </li> 
           <li>31st Puerto Rico Interdisciplinary Scientific Meeting, Bayamón, PR, 2011 </li>
           <li>Society for the Advancement of Chicanos and Native Americans in Science National Conference, Anaheim, CA, 2010</li> 
