--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
       
   <h1> CV </h1>
   
-  <p style="padding-left:15px"> My full C.V. is available here. An abbreviated version is shown below:
+  <p style="padding-left:15px"> My full C.V. is available here in pdf format. An abbreviated version is shown below:
     
   </br>
   </br>
@@ -35,6 +35,9 @@
 </br>
      <h1> Diamilet Pérez-Betancourt, Ph.D.</h1>
 <p class="centered"> <b>Postdoctoral Associate</b></p>
+
+ <a href="https://www.fiu.edu/" target="_blank"><img src="https://brand.fiu.edu/_assets/images/fiu-alone.png" class="logo"></a>
+
   <p class="centered"> International Hurricane Research Center, Extreme Events Institute, Florida International University</p>
   
   <div class="section-title">
