--- a/cv.html
+++ b/cv.html
@@ -36,7 +36,7 @@
      <h1> Diamilet Pérez-Betancourt, Ph.D.</h1>
 <p class="centered"> <b>Postdoctoral Associate</b></p>
 
- <a href="https://www.fiu.edu/" target="_blank"><img src="https://brand.fiu.edu/_assets/images/fiu-alone.png" class="logo" style="max-width: 20%"!important></a>
+ <a href="https://www.fiu.edu/" target="_blank"><img src="https://brand.fiu.edu/_assets/images/fiu-alone.png" class="logo" style="width:20%; max-width: 30%"!important></a>
 
   <p class="centered"> International Hurricane Research Center, Extreme Events Institute, Florida International University</p>
   
