--- a/cv.html
+++ b/cv.html
@@ -34,12 +34,22 @@
 <hr size=2 noshade>
 </br>
      <h1> Diamilet Pérez-Betancourt, Ph.D.</h1>
-<p class="centered"> <b>Postdoctoral Associate</b></p>
-
- <a href="https://www.fiu.edu/" target="_blank"><img src="https://brand.fiu.edu/_assets/images/fiu-alone.png" class="logo" style="width:15%;min-width:30%"!important></a>
-
-  <p class="centered"> International Hurricane Research Center, Extreme Events Institute, Florida International University</p>
   
+<div class="container">
+  <div class="clearfix">
+      <div class="cvleftcolumn"></br> 
+       <a href="https://www.fiu.edu/" target="_blank"><img src="https://brand.fiu.edu/_assets/images/fiu-alone.png" class="logo"></a>
+      </div> 
+      <div class="cvrightcolumn">
+        <p>
+        <b>Postdoctoral Associate</b> </br>
+       International Hurricane Research Center, Extreme Events Institute, Florida International University
+        </p>
+      </div> 
+ </div>
+</div>
+
+
   <div class="section-title">
     Education
   </div>
