--- a/cv.html
+++ b/cv.html
@@ -255,7 +255,21 @@ Non-refereed:
           <li>Society for the Advancement of Chicanos and Native Americans in Science National Conference, Anaheim, CA, 2010</li> 
       </ul>
 
-  
+ <div class="section-title">
+  Teaching Experience
+</div> 
+
+<ul style="line-height: 1.5">
+  <li><b>MIT 12.811 - Tropical Meteorology</b></br>
+This course describes the large-scale circulation systems of the tropical atmosphere and analyzes the dynamics of such systems. </br>
+Teaching Assistant, Spring 2015 and 2017
+</li>
+  <li><b>MIT 12.310 - Introduction to Weather Forecasting</b></br>
+This course introduces the basic principles of synoptic meteorology and weather forecasting, analyzing hourly weather data, and numerical weather prediction models. </br>
+Teaching Assistant, January 2016 and 2017
+</li>
+</ul>
+</br>
 
 <footer>
   <div id="footer-content">
