--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
       
   <h1> CV </h1>
   
-  <p style="padding-left:15px"> My full C.V. is available here in pdf format. An abbreviated version is shown below:
+  <p style="padding-left:15px"> My full C.V. is available <a  style="color:black"  href="https://diamilet.github.io/docs/PerezBetancourt_Diamilet_CV2021.pdf" target="_blank">here</a> in pdf format. An abbreviated version is shown below:
     
   </br>
   </br>
