--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
      content="width=device-width, initial-scale=1, user-scalable=yes">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Diamilet (Diamy) Perez-Betancourt, PhD</title>
+  <script type = "text/javascript" src="script.js"></script> 
+  <title>Diamilet (Diamy) Perez-Betancourt, PhD</title> 
 </head>
   
 <!-- Header Navigation Menu -->
@@ -19,7 +20,7 @@
     <a href="leadership.html">Leadership</a>
     <a href="resources.html">Resources</a>
     <a href="cv.html">CV</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <a href="javascript:void(0);" class="icon" onclick="MenuFunction()">
     <i class="fa fa-bars"></i>
   </a>
 </div>  
@@ -68,18 +69,6 @@
     <p> </p>
   </div>
 </footer>
-  
-<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
-
   
 </body>
 </html>
