--- a/leadership.html
+++ b/leadership.html
@@ -7,6 +7,7 @@
      content="width=device-width, initial-scale=1, user-scalable=yes">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script type = "text/javascript" src="script.js"></script> 
   <title>Diamilet (Diamy) Perez-Betancourt, PhD</title>
 </head>
   
@@ -128,18 +129,6 @@
     <p> </p>
   </div>
 </footer>
-  
-<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
-
   
 </body>
 </html>
