--- a/resources.html
+++ b/resources.html
@@ -20,7 +20,7 @@
     <a href="leadership.html">Leadership</a>
     <a href="#" class="active">Resources</a>
     <a href="cv.html">CV</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <a href="javascript:void(0);" class="icon" onclick="MenuFunction()">
     <i class="fa fa-bars"></i>
   </a>
 </div>  
