--- a/resources.html
+++ b/resources.html
@@ -255,7 +255,7 @@
   <li><b>American Geophysical Union: </b><a style="color:black" href="https://www.agu.org/fall-meeting" target="_blank">Fall Meeting</a></li>
   <li><b>American Meteorological Society: </b><a style="color:black" href="https://annual.ametsoc.org/" target="_blank">Annual Meeting</a> | <a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/meetings-events/upcoming-meetings/" target="_blank">Upcoming Meetings</a></li>
   <li><b>Graduate Climate Conference:</b><a style="color:black" href="http://www.graduateclimateconference.com/" target="_blank"> Main Page</a> | <a style="color:black" href="http://gradclimateconf.mit.edu/" target="_blank">MIT page</a></li>
-  <li><b>World Weather Open Science Conference (World Meteorological Organization)</b><a style="color:black" href="https://public.wmo.int/en/resources/bulletin/world-weather-open-science-conference" target="_blank"> 2014</a></li>
+  <li><b>World Weather Open Science Conference (World Meteorological Organization): </b><a style="color:black" href="https://public.wmo.int/en/resources/bulletin/world-weather-open-science-conference" target="_blank">2014</a></li>
 </ul>  
 
 
