--- a/resources.html
+++ b/resources.html
@@ -134,7 +134,7 @@
   <img border="0" src="http://tropic.ssec.wisc.edu/STORMPLOT.GIF" class="centered"></a>
   <p class="centered"> <b>Atlantic</b> </p>
   <a href="https://www.nhc.noaa.gov/" target="_blank">
-    <img border="0" src="https://www.nhc.noaa.gov/xgtwo/two_atl_0d0.png?311748" class="centered"></a>
+    <img border="0" src="https://www.nhc.noaa.gov/overview_atl/tafb_atl_graphics.png" class="centered"></a>
 </div>
 </div> 
    
