--- a/resources.html
+++ b/resources.html
@@ -61,6 +61,7 @@
    <ul>
     <li><a style="color:#4d4d4d" href="#internships">&raquo; Internships</a></li>
     <li><a style="color:#4d4d4d" href="#conferences">&raquo; Conferences</a></li> 
+    <li><a style="color:#4d4d4d" href="#funding">&raquo; Funding</a></li> 
   </ul>  
 </ul>
 </div>  
@@ -258,6 +259,10 @@
   <li><b>World Weather Open Science Conference (World Meteorological Organization): </b><a style="color:black" href="https://public.wmo.int/en/resources/bulletin/world-weather-open-science-conference" target="_blank">2014</a></li>
 </ul>  
 
+<h5 id="conferences">&raquo; Funding</h5>
+<ul class="nospace">
+  <li><a style="color:black" href="https://www.anl.gov/hr/walter-massey-fellowship" target="_blank">Walter Massey Fellowship</a></li>
+</ul>
 
  <!--<a style="color:black" href="" target="_blank"></a>--> 
 <footer>
