--- a/resources.html
+++ b/resources.html
@@ -262,6 +262,7 @@
 <h5 id="conferences">&raquo; Funding</h5>
 <ul class="nospace">
   <li><a style="color:black" href="https://www.anl.gov/hr/walter-massey-fellowship" target="_blank">Walter Massey Fellowship</a></li>
+  <li><a style="color:black" href="https://engineering.purdue.edu/Engr/Research/GilbrethFellowships" target="_blank">Lillian Gilbreth Postdoctoral Fellowships at Purdue Engineering</a></li>
 </ul>
 
  <!--<a style="color:black" href="" target="_blank"></a>--> 
