--- a/resources.html
+++ b/resources.html
@@ -260,11 +260,12 @@
   <li><b>World Weather Open Science Conference (World Meteorological Organization): </b><a style="color:black" href="https://public.wmo.int/en/resources/bulletin/world-weather-open-science-conference" target="_blank">2014</a></li>
 </ul>  
 
-<h5 id="workshops">&raquo; Workshop</h5>
+<h5 id="workshops">&raquo; Workshops</h5>
 
 <h5 id="funding">&raquo; Funding</h5>
 <ul class="nospace">
   <li><a style="color:black" href="https://engineering.purdue.edu/Engr/Research/GilbrethFellowships" target="_blank">Lillian Gilbreth Postdoctoral Fellowships at Purdue Engineering</a></li>
+   <li><a style="color:black" href="https://www2.acom.ucar.edu/ralph-cicerone-fellowship" target="_blank">Ralph Cicerone Fellowship in Earth System Science</a></li>
   <li><a style="color:black" href="https://www.anl.gov/hr/walter-massey-fellowship" target="_blank">Walter Massey Fellowship</a></li>
 </ul>
 
