--- a/resources.html
+++ b/resources.html
@@ -63,6 +63,7 @@
     <li><a style="color:#4d4d4d" href="#conferences">&raquo; Conferences</a></li> 
      <li><a style="color:#4d4d4d" href="#workshops">&raquo; Workshops</a></li> 
     <li><a style="color:#4d4d4d" href="#funding">&raquo; Funding</a></li> 
+     <li><a style="color:#4d4d4d" href="#jobboards">&raquo; Job Boards</a></li> 
   </ul>  
 </ul>
 </div>  
@@ -249,6 +250,8 @@
 <ul class="nospace">
   <li><a style="color:black" href="https://www.noaa.gov/opportunity-type/internship" target="_blank">National Oceanic and Atmospheric Administration</a></li>
   <li><a style="color:black" href="https://soars.ucar.edu/" target="_blank">Significant Opportunities in Atmospheric Research and Science Program</a></li> 
+  <li><a style="color:black" href="https://www.epa.gov/careers/student-internships" target="_blank">U.S. Environmental Protection Agency</a></li> 
+  
 </ul>
 
 <h5 id="conferences">&raquo; Conferences</h5>
@@ -269,6 +272,8 @@
     <li><a style="color:black" href="https://seagrant.noaa.gov/Prospective" target="_blank">Sea Grant Knauss Fellowship</a></li>  
   <li><a style="color:black" href="https://www.anl.gov/hr/walter-massey-fellowship" target="_blank">Walter Massey Fellowship</a></li>
 </ul>
+
+<h5 id="jobboards">&raquo; Job Boards</h5>
 
  <!--<a style="color:black" href="" target="_blank"></a>--> 
 <footer>
