--- a/resources.html
+++ b/resources.html
@@ -246,9 +246,10 @@
     Opportunities
 </div>  
 
-<h5 id="internships">&raquo; Internships</h5>
+<h5 id="internships">&raquo; Internships and/or Leadership Development Programs:</h5>
 <ul class="nospace">
   <li><a style="color:black" href="https://www.noaa.gov/opportunity-type/internship" target="_blank">National Oceanic and Atmospheric Administration</a></li>
+    <li><a style="color:black" href="https://www.landtrustalliance.org/blog/scholars-conservation-leadership-program" target="_blank">Scholars for Conservation Leadership Program</a></li>
   <li><a style="color:black" href="https://soars.ucar.edu/" target="_blank">Significant Opportunities in Atmospheric Research and Science Program</a></li> 
   <li><a style="color:black" href="https://www.epa.gov/careers/student-internships" target="_blank">U.S. Environmental Protection Agency</a></li> 
   
