--- a/resources.html
+++ b/resources.html
@@ -246,13 +246,13 @@
     Opportunities
 </div>  
 
-<h5 id="internships">&raquo; Internships and/or Leadership Development Programs:</h5>
+<h5 id="internships">&raquo; Internships and/or Leadership Programs:</h5>
 <ul class="nospace">
   <li><a style="color:black" href="https://www.noaa.gov/opportunity-type/internship" target="_blank">National Oceanic and Atmospheric Administration</a></li>
     <li><a style="color:black" href="https://www.landtrustalliance.org/blog/scholars-conservation-leadership-program" target="_blank">Scholars for Conservation Leadership Program</a></li>
   <li><a style="color:black" href="https://soars.ucar.edu/" target="_blank">Significant Opportunities in Atmospheric Research and Science Program</a></li> 
-  <li><a style="color:black" href="https://www.epa.gov/careers/student-internships" target="_blank">U.S. Environmental Protection Agency</a></li> 
-  
+<li><a style="color:black" href="https://www.geosociety.org/GSA/Education_Careers/Grants_Scholarships/otf/GSA/OTF/Home.aspx" target="_blank">The Geological Society of America's On To The Future</a></li> 
+  <li><a style="color:black" href="https://www.epa.gov/careers/student-internships" target="_blank">U.S. Environmental Protection Agency</a></li>  
 </ul>
 
 <h5 id="conferences">&raquo; Conferences</h5>
