--- a/resources.html
+++ b/resources.html
@@ -246,8 +246,10 @@
     Opportunities
 </div>  
 
-<h5 id="internships">&raquo; Internships and/or Leadership Programs:</h5>
+<h5 id="internships">&raquo; Internships and/or Mentorship Programs:</h5>
 <ul class="nospace">
+    
+  <li><a style="color:black" href="https://csumb.edu/cme/undergraduate-students" target="_blank">California State University's Coastal and Marine Ecosystems Program</a></li>
   <li><a style="color:black" href="https://www.noaa.gov/opportunity-type/internship" target="_blank">National Oceanic and Atmospheric Administration</a></li>
     <li><a style="color:black" href="https://www.landtrustalliance.org/blog/scholars-conservation-leadership-program" target="_blank">Scholars for Conservation Leadership Program</a></li>
   <li><a style="color:black" href="https://soars.ucar.edu/" target="_blank">Significant Opportunities in Atmospheric Research and Science Program</a></li> 
