--- a/resources.html
+++ b/resources.html
@@ -259,6 +259,7 @@
 
 <h5 id="conferences">&raquo; Conferences</h5>
 <ul class="nospace">
+  <li><a style="color:black" href="https://www.studentexpo.org/" target="_blank"> Annual Geoscience Student EXPO</a></b></li>
   <li><b>American Association for the Advancement of Science:</b><a style="color:black" href="https://meetings.aaas.org/" target="_blank"> Annual Meeting</a></li>
   <li><b>American Geophysical Union: </b><a style="color:black" href="https://www.agu.org/fall-meeting" target="_blank">Fall Meeting</a></li>
   <li><b>American Meteorological Society: </b><a style="color:black" href="https://annual.ametsoc.org/" target="_blank">Annual Meeting</a> | <a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/meetings-events/upcoming-meetings/" target="_blank">Upcoming Meetings</a></li>
@@ -277,6 +278,9 @@
 </ul>
 
 <h5 id="jobboards">&raquo; Job Boards</h5>
+<ul class="nospace">
+<li><a style="color:black" href="https://www.usajobs.gov/" target="_blank">USAjobs</a></li>
+</ul>
 
  <!--<a style="color:black" href="" target="_blank"></a>--> 
 <footer>
