--- a/resources.html
+++ b/resources.html
@@ -272,6 +272,7 @@
 <h5 id="funding">&raquo; Funding</h5>
 <ul class="nospace">
 <li><a style="color:black" href="https://engineering.purdue.edu/Engr/Research/GilbrethFellowships" target="_blank">Lillian Gilbreth Postdoctoral Fellowships at Purdue Engineering</a></li>
+  <li><a style="color:black" href="https://www.nsfgrfp.org/" target="_blank">National Science Foundation's Graduate Research Fellowship Program</a></li>
    <li><a style="color:black" href="https://www2.acom.ucar.edu/ralph-cicerone-fellowship" target="_blank">Ralph Cicerone Fellowship in Earth System Science</a></li>
     <li><a style="color:black" href="https://seagrant.noaa.gov/Prospective" target="_blank">Sea Grant Knauss Fellowship</a></li>  
   <li><a style="color:black" href="https://www.anl.gov/hr/walter-massey-fellowship" target="_blank">Walter Massey Fellowship</a></li>
