--- a/resources.html
+++ b/resources.html
@@ -263,7 +263,7 @@
   <li><b>American Association for the Advancement of Science:</b><a style="color:black" href="https://meetings.aaas.org/" target="_blank"> Annual Meeting</a></li>
   <li><b>American Geophysical Union: </b><a style="color:black" href="https://www.agu.org/fall-meeting" target="_blank">Fall Meeting</a></li>
   <li><b>American Meteorological Society: </b><a style="color:black" href="https://annual.ametsoc.org/" target="_blank">Annual Meeting</a> | <a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/meetings-events/upcoming-meetings/" target="_blank">Upcoming Meetings</a></li>
-  <li><b>Graduate Climate Conference:</b><a style="color:black" href="http://www.graduateclimateconference.com/" target="_blank"> Main Page</a> | <a style="color:black" href="http://gradclimateconf.mit.edu/" target="_blank">MIT page</a></li>
+  <li><b>Graduate Climate Conference: </b><a style="color:black" href="http://www.graduateclimateconference.com/" target="_blank">Main Page</a> | <a style="color:black" href="http://gradclimateconf.mit.edu/" target="_blank">MIT page</a></li>
   <li><b>World Weather Open Science Conference (World Meteorological Organization): </b><a style="color:black" href="https://public.wmo.int/en/resources/bulletin/world-weather-open-science-conference" target="_blank">2014</a></li>
 </ul>  
 
@@ -272,6 +272,7 @@
 <h5 id="funding">&raquo; Funding</h5>
 <ul class="nospace">
 <li><a style="color:black" href="https://engineering.purdue.edu/Engr/Research/GilbrethFellowships" target="_blank">Lillian Gilbreth Postdoctoral Fellowships at Purdue Engineering</a></li>
+  <li><a style="color:black" href="https://www.loreal.com/en/usa/pages/group/fwis/" target="_blank">L’Oréal USA For Women in Science Fellowship</a></li>
   <li><a style="color:black" href="https://www.nsfgrfp.org/" target="_blank">National Science Foundation's Graduate Research Fellowship Program</a></li>
    <li><a style="color:black" href="https://www2.acom.ucar.edu/ralph-cicerone-fellowship" target="_blank">Ralph Cicerone Fellowship in Earth System Science</a></li>
     <li><a style="color:black" href="https://seagrant.noaa.gov/Prospective" target="_blank">Sea Grant Knauss Fellowship</a></li>  
