--- a/resources.html
+++ b/resources.html
@@ -251,7 +251,7 @@
     
   <li><a style="color:black" href="https://csumb.edu/cme/undergraduate-students" target="_blank">California State University's Coastal and Marine Ecosystems Program</a></li>
   <li><a style="color:black" href="https://www.noaa.gov/opportunity-type/internship" target="_blank">National Oceanic and Atmospheric Administration</a></li>
-   <li><a style="color:black" href="https://www.weather.gov/ncep/student_internships" target="_blank">The William M. Lapenta Student Internship Program</a></li>  
+   <li><a style="color:black" href="https://www.weather.gov/ncep/student_internships" target="_blank">The William M. Lapenta NOAA Student Internship Program</a></li>  
     <li><a style="color:black" href="https://www.landtrustalliance.org/blog/scholars-conservation-leadership-program" target="_blank">Scholars for Conservation Leadership Program</a></li>
   <li><a style="color:black" href="https://soars.ucar.edu/" target="_blank">Significant Opportunities in Atmospheric Research and Science Program</a></li> 
 <li><a style="color:black" href="https://www.geosociety.org/GSA/Education_Careers/Grants_Scholarships/otf/GSA/OTF/Home.aspx" target="_blank">The Geological Society of America's On To The Future</a></li> 
