--- a/resources.html
+++ b/resources.html
@@ -260,12 +260,12 @@
 
 <h5 id="conferences">&raquo; Conferences</h5>
 <ul class="nospace">
-  <li><b><a style="color:black" href="https://www.studentexpo.org/" target="_blank"> Annual Geoscience Student EXPO</a></b></li>
-  <li><b>American Association for the Advancement of Science:</b><a style="color:black" href="https://meetings.aaas.org/" target="_blank"> Annual Meeting</a></li>
-  <li><b>American Geophysical Union: </b><a style="color:black" href="https://www.agu.org/fall-meeting" target="_blank">Fall Meeting</a></li>
-  <li><b>American Meteorological Society: </b><a style="color:black" href="https://annual.ametsoc.org/" target="_blank">Annual Meeting</a> | <a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/meetings-events/upcoming-meetings/" target="_blank">Upcoming Meetings</a></li>
-  <li><b>Graduate Climate Conference: </b><a style="color:black" href="http://www.graduateclimateconference.com/" target="_blank">Main Page</a> | <a style="color:black" href="http://gradclimateconf.mit.edu/" target="_blank">MIT page</a></li>
-  <li><b>World Weather Open Science Conference (World Meteorological Organization): </b><a style="color:black" href="https://public.wmo.int/en/resources/bulletin/world-weather-open-science-conference" target="_blank">2014</a></li>
+  <li><a style="color:black" href="https://www.studentexpo.org/" target="_blank"> Annual Geoscience Student EXPO</a></li>
+  <li><b>American Association for the Advancement of Science: </b><a style="color:black" href="https://meetings.aaas.org/" target="_blank">Annual Meeting</a></li>
+  <li>American Geophysical Union: <a style="color:black" href="https://www.agu.org/fall-meeting" target="_blank">Fall Meeting</a></li>
+  <li>American Meteorological Society: <a style="color:black" href="https://annual.ametsoc.org/" target="_blank">Annual Meeting</a> | <a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/meetings-events/upcoming-meetings/" target="_blank">Upcoming Meetings</a></li>
+  <li>Graduate Climate Conference: <a style="color:black" href="http://www.graduateclimateconference.com/" target="_blank">Main Page</a> | <a style="color:black" href="http://gradclimateconf.mit.edu/" target="_blank">MIT page</a></li>
+  <li>World Weather Open Science Conference (World Meteorological Organization): <a style="color:black" href="https://public.wmo.int/en/resources/bulletin/world-weather-open-science-conference" target="_blank">2014</a></li>
 </ul>  
 
 <h5 id="workshops">&raquo; Workshops</h5>
