--- a/resources.html
+++ b/resources.html
@@ -62,7 +62,7 @@
     <li><a style="color:#4d4d4d" href="#internships">&raquo; Internships</a></li>
     <li><a style="color:#4d4d4d" href="#conferences">&raquo; Conferences</a></li> 
      <li><a style="color:#4d4d4d" href="#workshops">&raquo; Workshops</a></li> 
-    <li><a style="color:#4d4d4d" href="#funding">&raquo; Funding</a></li> 
+    <li><a style="color:#4d4d4d" href="#fellowships">&raquo; Fellowships</a></li> 
      <li><a style="color:#4d4d4d" href="#jobboards">&raquo; Job Boards</a></li> 
   </ul>  
 </ul>
@@ -261,7 +261,7 @@
 <h5 id="conferences">&raquo; Conferences</h5>
 <ul class="nospace">
   <li><a style="color:black" href="https://www.studentexpo.org/" target="_blank"> Annual Geoscience Student EXPO</a></li>
-  <li><b>American Association for the Advancement of Science: </b><a style="color:black" href="https://meetings.aaas.org/" target="_blank">Annual Meeting</a></li>
+  <li>American Association for the Advancement of Science: <a style="color:black" href="https://meetings.aaas.org/" target="_blank">Annual Meeting</a></li>
   <li>American Geophysical Union: <a style="color:black" href="https://www.agu.org/fall-meeting" target="_blank">Fall Meeting</a></li>
   <li>American Meteorological Society: <a style="color:black" href="https://annual.ametsoc.org/" target="_blank">Annual Meeting</a> | <a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/meetings-events/upcoming-meetings/" target="_blank">Upcoming Meetings</a></li>
   <li>Graduate Climate Conference: <a style="color:black" href="http://www.graduateclimateconference.com/" target="_blank">Main Page</a> | <a style="color:black" href="http://gradclimateconf.mit.edu/" target="_blank">MIT page</a></li>
@@ -270,13 +270,14 @@
 
 <h5 id="workshops">&raquo; Workshops</h5>
 
-<h5 id="funding">&raquo; Funding</h5>
+<h5 id="fellowships">&raquo; Fellowships</h5>
 <ul class="nospace">
 <li><a style="color:black" href="https://engineering.purdue.edu/Engr/Research/GilbrethFellowships" target="_blank">Lillian Gilbreth Postdoctoral Fellowships at Purdue Engineering</a></li>
   <li><a style="color:black" href="https://www.loreal.com/en/usa/pages/group/fwis/" target="_blank">L’Oréal USA For Women in Science Fellowship</a></li>
   <li><a style="color:black" href="https://www.nsfgrfp.org/" target="_blank">National Science Foundation's Graduate Research Fellowship Program</a></li>
    <li><a style="color:black" href="https://www2.acom.ucar.edu/ralph-cicerone-fellowship" target="_blank">Ralph Cicerone Fellowship in Earth System Science</a></li>
     <li><a style="color:black" href="https://seagrant.noaa.gov/Prospective" target="_blank">Sea Grant Knauss Fellowship</a></li>  
+     <li><a style="color:black" href="https://www.agu.org/Share-and-Advocate/Share/Policymakers/Congressional-Science-Fellowship" target="_blank">The AGU Congressional Science Fellowship </a></li>   
   <li><a style="color:black" href="https://www.anl.gov/hr/walter-massey-fellowship" target="_blank">Walter Massey Fellowship</a></li>
 </ul>
 
