--- a/resources.html
+++ b/resources.html
@@ -271,10 +271,11 @@
 
 <h5 id="workshops">&raquo; Workshops</h5>
 
-<h5 id="fellowships">&raquo; Fellowships</h5>
+<h5 id="fellowships">&raquo; Scholarships and Fellowships</h5>
 <ul class="nospace">
 <li><a style="color:black" href="https://engineering.purdue.edu/Engr/Research/GilbrethFellowships" target="_blank">Lillian Gilbreth Postdoctoral Fellowships at Purdue Engineering</a></li>
   <li><a style="color:black" href="https://www.loreal.com/en/usa/pages/group/fwis/" target="_blank">L’Oréal USA For Women in Science Fellowship</a></li>
+    <li><a style="color:black" href="https://www.mahoganymermaids.com/apply" target="_blank">MahoganyMermaids Annual Scholarship</a></li>
   <li><a style="color:black" href="https://www.nsfgrfp.org/" target="_blank">National Science Foundation's Graduate Research Fellowship Program</a></li>
    <li><a style="color:black" href="https://www2.acom.ucar.edu/ralph-cicerone-fellowship" target="_blank">Ralph Cicerone Fellowship in Earth System Science</a></li>
     <li><a style="color:black" href="https://seagrant.noaa.gov/Prospective" target="_blank">Sea Grant Knauss Fellowship</a></li>  
