--- a/resources.html
+++ b/resources.html
@@ -258,12 +258,13 @@
   <li><a style="color:black" href="https://www.epa.gov/careers/student-internships" target="_blank">U.S. Environmental Protection Agency</a></li>  
 </ul>
 
-<h5 id="conferences">&raquo; Conferences</h5>
+<h5 id="conferences">&raquo; Conferences and Networking Opportunities</h5>
 <ul class="nospace">
-  <li><a style="color:black" href="https://www.studentexpo.org/" target="_blank"> Annual Geoscience Student EXPO</a></li>
+  <li><a style="color:black" href="https://www.studentexpo.org/" target="_blank">Annual Geoscience Student EXPO</a></li>
   <li>American Association for the Advancement of Science: <a style="color:black" href="https://meetings.aaas.org/" target="_blank">Annual Meeting</a></li>
   <li>American Geophysical Union: <a style="color:black" href="https://www.agu.org/fall-meeting" target="_blank">Fall Meeting</a></li>
   <li>American Meteorological Society: <a style="color:black" href="https://annual.ametsoc.org/" target="_blank">Annual Meeting</a> | <a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/meetings-events/upcoming-meetings/" target="_blank">Upcoming Meetings</a></li>
+  <li><a style="color:black" href="https://eas.caltech.edu/young_investigators" target="_blank">Caltech's Young Investigators Lecture Series</a></li>
   <li>Graduate Climate Conference: <a style="color:black" href="http://www.graduateclimateconference.com/" target="_blank">Main Page</a> | <a style="color:black" href="http://gradclimateconf.mit.edu/" target="_blank">MIT page</a></li>
    <li><a style="color:black" href="https://www.unols.org/events" target="_blank"> University-National Oceanographic Laboratory System</a></li>
   <li>World Weather Open Science Conference (World Meteorological Organization): <a style="color:black" href="https://public.wmo.int/en/resources/bulletin/world-weather-open-science-conference" target="_blank">2014</a></li>
