--- a/resources.html
+++ b/resources.html
@@ -246,7 +246,7 @@
     Opportunities
 </div>  
 
-<h5 id="internships">&raquo; Internships and/or Mentorship Programs:</h5>
+<h5 id="internships">&raquo; Internships and/or Mentorship Programs</h5>
 <ul class="nospace">
     
   <li><a style="color:black" href="https://csumb.edu/cme/undergraduate-students" target="_blank">California State University's Coastal and Marine Ecosystems Program</a></li>
@@ -271,6 +271,9 @@
 </ul>  
 
 <h5 id="workshops">&raquo; Workshops</h5>
+<ul class="nospace">
+<li><a style="color:black" href="https://www.aaas-iuse.org/workshops/" target="_blank">AAAS-Imrpoving Undergraduate STEM Education </a></li>
+</ul>
 
 <h5 id="fellowships">&raquo; Scholarships and Fellowships</h5>
 <ul class="nospace">
