--- a/resources.html
+++ b/resources.html
@@ -272,7 +272,8 @@
 
 <h5 id="workshops">&raquo; Workshops</h5>
 <ul class="nospace">
-<li><a style="color:black" href="https://www.aaas-iuse.org/workshops/" target="_blank">AAAS-Imrpoving Undergraduate STEM Education </a></li>
+<li><a style="color:black" href="https://www.aaas-iuse.org/workshops/" target="_blank">AAAS-Imrpoving Undergraduate STEM Education</a></li>
+<li><a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/policy/summer-policy-colloquium/" target="_blank">AMS Summer Policy Colloquium</a></li>  
 </ul>
 
 <h5 id="fellowships">&raquo; Scholarships and Fellowships</h5>
