--- a/resources.html
+++ b/resources.html
@@ -246,9 +246,9 @@
     Opportunities
 </div>  
 
-<h5 id="internships">&raquo; Internships and/or Mentorship Programs</h5>
+<h5 id="internships">&raquo; Mentorship and/or Internship Programs</h5>
 <ul class="nospace">
-    
+<li><a style="color:black" href="https://www.agu.org/bridge-program" target="_blank">AGU Bridge Program</a></li>    
   <li><a style="color:black" href="https://csumb.edu/cme/undergraduate-students" target="_blank">California State University's Coastal and Marine Ecosystems Program</a></li>
   <li><a style="color:black" href="https://www.noaa.gov/opportunity-type/internship" target="_blank">National Oceanic and Atmospheric Administration</a></li>
    <li><a style="color:black" href="https://www.weather.gov/ncep/student_internships" target="_blank">The William M. Lapenta NOAA Student Internship Program</a></li>  
