--- a/resources.html
+++ b/resources.html
@@ -243,7 +243,7 @@
 
 
 <div id="opportunities" class="section-title">
-    Opportunities
+    Opportunities in atmospheric and related sciences
 </div>  
 
 <h5 id="internships">&raquo; Mentorship and/or Internship Programs</h5>
@@ -252,6 +252,7 @@
   <li><a style="color:black" href="https://csumb.edu/cme/undergraduate-students" target="_blank">California State University's Coastal and Marine Ecosystems Program</a></li>
   <li><a style="color:black" href="https://www.noaa.gov/opportunity-type/internship" target="_blank">National Oceanic and Atmospheric Administration</a></li>
    <li><a style="color:black" href="https://www.weather.gov/ncep/student_internships" target="_blank">The William M. Lapenta NOAA Student Internship Program</a></li>  
+      <li><a style="color:black" href="https://www.rmbl.org/students/undergraduates-beyond/summer-education-programreu/" target="_blank">Rocky Mountain Biological Laboratory </a> (might have environmental science, remote sensing projects)</li> 
     <li><a style="color:black" href="https://www.landtrustalliance.org/blog/scholars-conservation-leadership-program" target="_blank">Scholars for Conservation Leadership Program</a></li>
   <li><a style="color:black" href="https://soars.ucar.edu/" target="_blank">Significant Opportunities in Atmospheric Research and Science Program</a></li> 
 <li><a style="color:black" href="https://www.geosociety.org/GSA/Education_Careers/Grants_Scholarships/otf/GSA/OTF/Home.aspx" target="_blank">The Geological Society of America's On To The Future</a></li> 
@@ -272,7 +273,7 @@
 
 <h5 id="workshops">&raquo; Workshops</h5>
 <ul class="nospace">
-<li><a style="color:black" href="https://www.aaas-iuse.org/workshops/" target="_blank">AAAS-Imrpoving Undergraduate STEM Education</a></li>
+<li><a style="color:black" href="https://www.aaas-iuse.org/workshops/" target="_blank">AAAS-Improving Undergraduate STEM Education</a></li>
 <li><a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/policy/summer-policy-colloquium/" target="_blank">AMS Summer Policy Colloquium</a></li>  
 </ul>
 
