--- a/resources.html
+++ b/resources.html
@@ -32,38 +32,38 @@
 <ul id="toc">
   <li><a style="color:#4d4d4d" href="#weatherandclimate">Weather and Climate</a>
   <ul>
-    <li><a style="color:#4d4d4d" href="#agencies">&raquo; Agencies</a></li>
-    <li><a style="color:#4d4d4d" href="#observations">&raquo; Observations </a></li>
-    <li><a style="color:#4d4d4d" href="#modelguidance">&raquo; Model guidance </a></li>
-    <li><a style="color:#4d4d4d" href="#reanalysis">&raquo; Reanalysis </a></li>
-    <li><a style="color:#4d4d4d" href="#climatology">&raquo; Climatology </a></li>
+    <li>&raquo; <a style="color:#4d4d4d" href="#agencies">Agencies</a></li>
+    <li>&raquo; <a style="color:#4d4d4d" href="#observations">Observations </a></li>
+    <li>&raquo; <a style="color:#4d4d4d" href="#modelguidance">Model guidance </a></li>
+    <li>&raquo; <a style="color:#4d4d4d" href="#reanalysis">Reanalysis </a></li>
+    <li>&raquo; <a style="color:#4d4d4d" href="#climatology">Climatology </a></li>
   </ul>
 </li>
 <li><a style="color:#4d4d4d" href="#tropicalcyclones">Tropical Cyclones</a></li>
   <ul>
-    <li><a style="color:#4d4d4d" href="#tccenters">&raquo; Tropical cyclone centers (by area of responsibility)</a></li>
-    <li><a style="color:#4d4d4d" href="#tcotheragencies">&raquo; Other agencies</a></li>   
-    <li><a style="color:#4d4d4d" href="#tccurrentobs">&raquo; Current observations</a></li>  
-    <li><a style="color:#4d4d4d" href="#tcmodelguidance">&raquo; Real-Time model guidance</a></li>  
-    <li><a style="color:#4d4d4d" href="#tctrackdata">&raquo; Track data</a></li>  
-    <li><a style="color:#4d4d4d" href="#tcotherarchives">&raquo; Other archives</a></li>
+    <li>&raquo; <a style="color:#4d4d4d" href="#tccenters">Tropical cyclone centers (by area of responsibility)</a></li>
+    <li>&raquo; <a style="color:#4d4d4d" href="#tcotheragencies">Other agencies</a></li>   
+    <li>&raquo; <a style="color:#4d4d4d" href="#tccurrentobs">Current observations</a></li>  
+    <li>&raquo; <a style="color:#4d4d4d" href="#tcmodelguidance">Real-Time model guidance</a></li>  
+    <li>&raquo; <a style="color:#4d4d4d" href="#tctrackdata">Track data</a></li>  
+    <li>&raquo; <a style="color:#4d4d4d" href="#tcotherarchives">Other archives</a></li>
   </ul>
 <li><a style="color:#4d4d4d" href="#water">Water</a></li>
   <ul>
-    <li><a style="color:#4d4d4d" href="#elevationatdampsite">&raquo; Elevation at Damsite</a></li>
+    <li>&raquo; <a style="color:#4d4d4d" href="#elevationatdampsite">Elevation at Damsite</a></li>
   </ul>
 <li><a style="color:#4d4d4d" href="#wxchallenge">WxChallenge</a></li>
   <ul>
-    <li><a style="color:#4d4d4d" href="#officialwebsite">&raquo; Official Website</a></li>
-     <li><a style="color:#4d4d4d" href="#forecastingtools">&raquo; Forecasting Tools</a></li>
+    <li>&raquo; <a style="color:#4d4d4d" href="#officialwebsite">Official Website</a></li>
+     <li>&raquo; <a style="color:#4d4d4d" href="#forecastingtools">Forecasting Tools</a></li>
   </ul>  
 <li><a style="color:#4d4d4d" href="#opportunities">Opportunities</a></li>
    <ul>
-    <li><a style="color:#4d4d4d" href="#internships">&raquo; Internships</a></li>
-    <li><a style="color:#4d4d4d" href="#conferences">&raquo; Conferences</a></li> 
-     <li><a style="color:#4d4d4d" href="#workshops">&raquo; Workshops</a></li> 
-    <li><a style="color:#4d4d4d" href="#fellowships">&raquo; Fellowships</a></li> 
-     <li><a style="color:#4d4d4d" href="#jobboards">&raquo; Job Boards</a></li> 
+    <li>&raquo; <a style="color:#4d4d4d" href="#internships">Internships</a></li>
+    <li>&raquo; <a style="color:#4d4d4d" href="#conferences">Conferences</a></li> 
+     <li>&raquo; <a style="color:#4d4d4d" href="#workshops">Workshops</a></li> 
+    <li>&raquo; <a style="color:#4d4d4d" href="#fellowships">Fellowships</a></li> 
+     <li>&raquo; <a style="color:#4d4d4d" href="#jobboards">Job Boards</a></li> 
   </ul>  
 </ul>
 </div>  
@@ -285,9 +285,13 @@
   <li><a style="color:black" href="https://www.nsfgrfp.org/" target="_blank">National Science Foundation's Graduate Research Fellowship Program</a></li>
    <li><a style="color:black" href="https://www2.acom.ucar.edu/ralph-cicerone-fellowship" target="_blank">Ralph Cicerone Fellowship in Earth System Science</a></li>
     <li><a style="color:black" href="https://seagrant.noaa.gov/Prospective" target="_blank">Sea Grant Knauss Fellowship</a></li>  
-     <li><a style="color:black" href="https://www.agu.org/Share-and-Advocate/Share/Policymakers/Congressional-Science-Fellowship" target="_blank">The AGU Congressional Science Fellowship </a></li>   
+     <li><a style="color:black" href="https://www.agu.org/Share-and-Advocate/Share/Policymakers/Congressional-Science-Fellowship" target="_blank">The AGU Congressional Science Fellowship</a></li>   
+    <li><a style="color:black" href="https://www.ucar.edu/opportunities/fellowships/ucar-next-generation-fellowships" target="_blank">UCAR Next Generation Fellowship</a></li>
   <li><a style="color:black" href="https://www.anl.gov/hr/walter-massey-fellowship" target="_blank">Walter Massey Fellowship</a></li>
 </ul>
+
+
+
 
 <h5 id="jobboards">&raquo; Job Boards</h5>
 <ul class="nospace">
