--- a/resources.html
+++ b/resources.html
@@ -275,6 +275,8 @@
 <ul class="nospace">
 <li><a style="color:black" href="https://www.aaas-iuse.org/workshops/" target="_blank">AAAS-Improving Undergraduate STEM Education</a></li>
 <li><a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/policy/summer-policy-colloquium/" target="_blank">AMS Summer Policy Colloquium</a></li>  
+ <li><a style="color:black" href="https://comscicon.com/" target="_blank">ComSciCon (Communicating Science)</a></li>   
+ <li><a style="color:black" href="https://dtcenter.org/events" target="_blank">Developmental Testbed Center</a></li>  
 </ul>
 
 <h5 id="fellowships">&raquo; Scholarships and Fellowships</h5>
@@ -283,15 +285,13 @@
   <li><a style="color:black" href="https://www.loreal.com/en/usa/pages/group/fwis/" target="_blank">L’Oréal USA For Women in Science Fellowship</a></li>
     <li><a style="color:black" href="https://www.mahoganymermaids.com/apply" target="_blank">MahoganyMermaids Annual Scholarship</a></li>
   <li><a style="color:black" href="https://www.nsfgrfp.org/" target="_blank">National Science Foundation's Graduate Research Fellowship Program</a></li>
+   <li><a style="color:black" href="https://asp.ucar.edu/graduate-visitors/graduate-visitor-program" target="_blank">NCAR's Advanced Study Program's Graduate Student Fellowship</a></li> 
    <li><a style="color:black" href="https://www2.acom.ucar.edu/ralph-cicerone-fellowship" target="_blank">Ralph Cicerone Fellowship in Earth System Science</a></li>
     <li><a style="color:black" href="https://seagrant.noaa.gov/Prospective" target="_blank">Sea Grant Knauss Fellowship</a></li>  
      <li><a style="color:black" href="https://www.agu.org/Share-and-Advocate/Share/Policymakers/Congressional-Science-Fellowship" target="_blank">The AGU Congressional Science Fellowship</a></li>   
-    <li><a style="color:black" href="https://www.ucar.edu/opportunities/fellowships/ucar-next-generation-fellowships" target="_blank">UCAR Next Generation Fellowship</a></li>
+    <li><a style="color:black" href="https://www.ucar.edu/opportunities/fellowships/ucar-next-generation-fellowships" target="_blank">UCAR Next Generation Fellowships</a></li>
   <li><a style="color:black" href="https://www.anl.gov/hr/walter-massey-fellowship" target="_blank">Walter Massey Fellowship</a></li>
 </ul>
-
-
-
 
 <h5 id="jobboards">&raquo; Job Boards</h5>
 <ul class="nospace">
