--- a/resources.html
+++ b/resources.html
@@ -252,6 +252,7 @@
   <li><a style="color:black" href="https://csumb.edu/cme/undergraduate-students" target="_blank">California State University's Coastal and Marine Ecosystems Program</a></li>
   <li><a style="color:black" href="https://www.noaa.gov/opportunity-type/internship" target="_blank">National Oceanic and Atmospheric Administration</a></li>
    <li><a style="color:black" href="https://www.weather.gov/ncep/student_internships" target="_blank">The William M. Lapenta NOAA Student Internship Program</a></li>  
+    <li><a style="color:black" href="https://www.newvoicesnasem.org/" target="_blank">New Voices in Sciences, Engineering, and Medicine</a></li>   
       <li><a style="color:black" href="https://www.rmbl.org/students/undergraduates-beyond/summer-education-programreu/" target="_blank">Rocky Mountain Biological Laboratory</a> (might have environmental science, remote sensing projects)</li> 
     <li><a style="color:black" href="https://www.landtrustalliance.org/blog/scholars-conservation-leadership-program" target="_blank">Scholars for Conservation Leadership Program</a></li>
   <li><a style="color:black" href="https://soars.ucar.edu/" target="_blank">Significant Opportunities in Atmospheric Research and Science Program</a></li> 
