--- a/resources.html
+++ b/resources.html
@@ -59,10 +59,10 @@
   </ul>  
 <li><a style="color:#4d4d4d" href="#opportunities">Opportunities</a></li>
    <ul>
-    <li>&raquo; <a style="color:#4d4d4d" href="#internships">Internships</a></li>
-    <li>&raquo; <a style="color:#4d4d4d" href="#conferences">Conferences</a></li> 
+    <li>&raquo; <a style="color:#4d4d4d" href="#internships">Mentorship and/or Internship Programs</a></li>
+    <li>&raquo; <a style="color:#4d4d4d" href="#conferences">Conferences and Networking Opportunities</a></li> 
      <li>&raquo; <a style="color:#4d4d4d" href="#workshops">Workshops</a></li> 
-    <li>&raquo; <a style="color:#4d4d4d" href="#fellowships">Fellowships</a></li> 
+    <li>&raquo; <a style="color:#4d4d4d" href="#fellowships">Scholarships and Fellowships</a></li> 
      <li>&raquo; <a style="color:#4d4d4d" href="#jobboards">Job Boards</a></li> 
   </ul>  
 </ul>
@@ -266,6 +266,7 @@
   <li>American Association for the Advancement of Science: <a style="color:black" href="https://meetings.aaas.org/" target="_blank">Annual Meeting</a></li>
   <li>American Geophysical Union: <a style="color:black" href="https://www.agu.org/fall-meeting" target="_blank">Fall Meeting</a></li>
   <li>American Meteorological Society: <a style="color:black" href="https://annual.ametsoc.org/" target="_blank">Annual Meeting</a> | <a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/meetings-events/upcoming-meetings/" target="_blank">Upcoming Meetings</a></li>
+  <li><a style="color:black" href="https://beyondacademia.berkeley.edu/" target="_blank">Beyond Academia</a></li>  
   <li><a style="color:black" href="https://eas.caltech.edu/young_investigators" target="_blank">Caltech's Young Investigators Lecture Series</a></li>
   <li>Graduate Climate Conference: <a style="color:black" href="http://www.graduateclimateconference.com/" target="_blank">Main Page</a> | <a style="color:black" href="http://gradclimateconf.mit.edu/" target="_blank">MIT page</a></li>
    <li><a style="color:black" href="https://www.unols.org/events" target="_blank"> University-National Oceanographic Laboratory System</a></li>
@@ -275,7 +276,7 @@
 <h5 id="workshops">&raquo; Workshops</h5>
 <ul class="nospace">
 <li><a style="color:black" href="https://www.aaas-iuse.org/workshops/" target="_blank">AAAS-Improving Undergraduate STEM Education</a></li>
-<li><a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/policy/summer-policy-colloquium/" target="_blank">AMS Summer Policy Colloquium</a></li>  
+<li><a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/policy/summer-policy-colloquium/" target="_blank">AMS Summer Policy Colloquium</a></li>   
  <li><a style="color:black" href="https://comscicon.com/" target="_blank">ComSciCon (Communicating Science)</a></li>   
  <li><a style="color:black" href="https://dtcenter.org/events" target="_blank">Developmental Testbed Center</a></li>  
 </ul>
