--- a/resources.html
+++ b/resources.html
@@ -278,7 +278,7 @@
 <li><a style="color:black" href="https://www.aaas-iuse.org/workshops/" target="_blank">AAAS-Improving Undergraduate STEM Education</a></li>
 <li><a style="color:black" href="https://www.ametsoc.org/ams/index.cfm/policy/summer-policy-colloquium/" target="_blank">AMS Summer Policy Colloquium</a></li>   
  <li><a style="color:black" href="https://comscicon.com/" target="_blank">ComSciCon (Communicating Science)</a></li>   
- <li><a style="color:black" href="https://dtcenter.org/events" target="_blank">Developmental Testbed Center</a></li>  
+ <li><a style="color:black" href="https://dtcenter.org/events" target="_blank">Developmental Testbed Center Workshops</a></li>  
 </ul>
 
 <h5 id="fellowships">&raquo; Scholarships and Fellowships</h5>
