--- a/cv.html
+++ b/cv.html
@@ -261,7 +261,7 @@ Non-refereed:
 </div> 
 
 <ul style="line-height: 1.5">
-  <li><b>MIT 12.811 - Tropical Meteorology</b></br>
+  <li><b><a style="color:black" href="https://ocw.mit.edu/courses/earth-atmospheric-and-planetary-sciences/12-811-tropical-meteorology-spring-2011/" target="_blank">MIT 12.811 - Tropical Meteorology</a></b></br>
 This course describes the large-scale circulation systems of the tropical atmosphere and analyzes the dynamics of such systems. </br>
 Teaching Assistant, Spring 2015 and 2017
 </li>
